# smartmoney

./: .gitignore  1  BUDGET_CATEGORY_RESEARCH_SUMMARY.md  BUDGET_UI_UX_RESEARCH_SUMMARY.md  CLAUDE.md  COMPETITIVE_RESEARCH_DELIVERABLES.md  FINTECH_RESEARCH_COMPLETE.txt  FINTECH_RESEARCH_SUMMARY.md  MONTHLY_REPORT_RESEARCH.md  README.md  RELOCATION_COST_CALCULATOR_RESEARCH.md  RESEARCH_COMPLETE.md  RESEARCH_COMPLETION_REPORT.md  RESEARCH_EXECUTIVE_SUMMARY.md  RESEARCH_SUMMARY.txt  STATUS-UPDATE-2025-11-25.md  analyze_modal.js  chat_panel_debug.js  debug_modal.js  defi_modal_detailed_debug.js  defi_modal_final.js  defi_modal_zindex_debug.js  deploy-frontend.sh  deploy.sh  screenshot-after.js  screenshot-debug.js  screenshot-login.js  screenshot-mobile.js  screenshot-modal.js  screenshot-scan.js  screenshot-transactions.js  screenshot-verify.js  screenshot.js  test_refresh.js  verify_fix.js
backend/: =0.39.0  =6.11.0  CHAT_SERVICE_IMPLEMENTATION.md  IMPLEMENTATION.md  README.md  alembic.ini  pyproject.toml  stamp_migration.py  test_gamification.py  test_gamification_simple.py
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/data/: benchmark_seed.json
backend/scripts/: budget_consistency_audit.py  migrate_sources_to_accounts.py  spot_check_accuracy.py
backend/tests/: conftest.py  test_action_routes.py  test_action_service.py  test_analytics_service.py  test_api_routes.py  test_benchmark_service.py  test_chat_service.py  test_childcare_calculation.py  test_csv_parser.py  test_goal_service.py  test_merchant_normalizer.py  test_models.py  (+9 more)
(+3843 files in other folders)
